<?xml version="1.0"?>
<package format="2">
  <name>nusim</name>
  <version>0.0.1</version>
  <description>provide a simulated robot environment, which visualize the 
  cylinders at given start place and visulize a red turtle3-burger robot.</description>
  <maintainer email="zhuoruzhang2021@u.northwestern.edu">Zhuoru Zhang</maintainer>
  <license>BSD</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>std_msgs</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>turtlelib</build_depend>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <build_export_depend>std_msgs</build_export_depend> 
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>turtlelib</build_export_depend> 

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlelib</exec_depend>






  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
