<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_control</name>
  <version>0.0.0</version>
  <description>for simulation and real robot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhuoruzhang2021@northwestern.edu.cn">zhuoruzhang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nuturtlebot_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>turtlelib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>
  <test_depend>rostest</test_depend>
  <build_depend>rostest</build_depend>
  <build_depend>catch_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>genmsg</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>turtlelib</build_export_depend>
  <build_export_depend>nuturtlebot_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>nuturtlebot_msgs</exec_depend> 
  <exec_depend>turtlelib</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>turtlebot3</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nusim</exec_depend>
  <exec_depend>nuturtle_description</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
