<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_description</name>
  <version>0.0.3</version>
  <description>contains urdf files and basic debugging,testing, and visualization code for the robots using</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhuoruzhang2021@u.northwestern.edu">Zhuoru Zhang</maintainer>
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>roscpp</build_depend>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <build_export_depend>roscpp</build_export_depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
