<?xml version="1.0"?>
<package format="2">
  <name>turtlelib</name>
  <version>0.0.0</version>
  <description>provide basic library for body motion and diff_drive robot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhuoruzhang2021@u.northwestern.edu.cn">zhuoruzhang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>APLv2</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>roscpp</build_depend>
  <build_depend>catch_ros</build_depend>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <build_export_depend>catch_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>


  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>roscpp</exec_depend> 
  <exec_depend>catch_ros</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
